Cleaning up a bit. [0]